simple.yaml
apiVersion: v1
kind: Pod
metadata:
    name: simplepod
spec:
    containers:
    - image: nginx
      name: nginx-test
