dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-mongoexpress-ingress
spec:
  rules:
  - host: mongo-dashboard.com
    http:
      paths:
      - backend:
          service:
            name: mongo-express-service
            port: 
              number: 8081
        path: /
        pathType: ImplementationSpecific
